--- a/react-npm/package.json
+++ b/react-npm/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/mikelxc/techx-web-2021/issues"
   },
-  "homepage": "https://github.com/mikelxc/techx-web-2021#readme"
+  "homepage": "https://github.com/mikelxc/techx-web-2021#readme",
+  "devDependencies": {
+    "parcel": "*"
+  }
 }
